Adding tests for decorating visitor

--- a/core/src/test/resources/piecework/form/response/DecoratingVisitorTest.input.html
+++ b/core/src/test/resources/piecework/form/response/DecoratingVisitorTest.input.html
@@ -12,6 +12,11 @@
             </div>
             <div id="supplemental">
                 <input name="supervisorId">
+                <input name="Applicable">
+                <input name="Allowed">
+                <textarea name="Description"></textarea>
+                <select name="action"></select>
+                <select name="location"><option value="None">Nothing</option></select>
                 <button type="submit">Submit</button>
             </div>
        </form>
