--- a/core/src/test/resources/piecework/form/response/DecoratingVisitorTest.output.html
+++ b/core/src/test/resources/piecework/form/response/DecoratingVisitorTest.output.html
@@ -5,7 +5,7 @@
 
 </head><body>
 
-       <form enctype="multipart/form-data" action="null" method="POST">
+       <form enctype="multipart/form-data" action="" method="POST">
             <div id="basic">
                 <input maxlength="40" name="employeeName" value="Joe Testington" type="text" />
                 <input maxlength="20" name="budgetNumber" type="text" />
