More work on instance search screen

--- a/web/src/main/webapp/piecework/SearchResults.process.template.html
+++ b/web/src/main/webapp/piecework/SearchResults.process.template.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><% name %></title>
-    <link href="static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-    <link href="static/css/shared.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../static/css/shared.css" rel="stylesheet">
 </head>
 <body role="application">
     <form id="main-form" method="POST">
@@ -95,5 +95,5 @@
         }
 
     </script>
-    <script data-main="static/js/search.js" src='static/js/vendor/require.js'></script>
+    <script data-main="../static/js/search.js" src='../static/js/vendor/require.js'></script>
 </body>
