--- a/web/src/main/webapp/piecework/Form.template.html
+++ b/web/src/main/webapp/piecework/Form.template.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=8" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>{{applicationTitle}}</title>
+    <link href="/piecework/static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="/piecework/static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
 </head>
 
 <body>
-    <div class="main-content">
+    <div class="main-content container-fluid">
 
     </div>
 
