--- a/web/src/main/webapp/piecework/Form.template.html
+++ b/web/src/main/webapp/piecework/Form.template.html
@@ -5,8 +5,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{applicationTitle}}</title>
-    <link href="/piecework/static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="/piecework/static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <style>
+        ul.sections {
+            list-style: none;
+            margin: 0px;
+            padding: 0px;
+        }
+    </style>
 </head>
 
 <body>
@@ -14,54 +21,316 @@
 
     </div>
 
-
-<!--
-	<form id="main-form" method="POST">
-		<div class="screen-header">
-			<div class="userInformation"><% user.displayName %></div>
-		</div>
-		<div class="page">
-			<div class="page-toolbar">
-				<div id="attachmentToolbar" class="pull-right"></div>
-				<div id="task-toolbar" class="pull-right"></div>
-			</div>
-			<div class="page-header">
-				<%#resource.logoUrl%>
-			 	<div class="page-logo">
-					 <img src="<% resource.logoUrl %>"></img>
-				</div>
-				<%/resource.logoUrl%>
-			 	<h2><% resource.label %></h2>
-			</div>
-			<div class="go-back">Sections</div>
-			<div class="page-main">
-				<%#resource.message%>
-				<div class="alert">
-				  <button type="button" class="close" data-dismiss="alert">&times;</button>
-				  <div class="page-notification"><%resource.message%></div>
-				</div>
-				<%/resource.message%>
-				<div class="navigation">
-				 	<div id="breadcrumbs"></div>
-				</div>
-				<div class="content">
-					<%#resource.processInstanceId%>
-					<h3 class="confirmation">
-				 		Thanks for submitting your form. Your confirmation number is <%resource.processInstanceId%>.
-				 	</h3>
-					<%/resource.processInstanceId%>
-					<div class="form-content-placeholder">
-						<input type="hidden" name="_submissionId" value="<%resource.submissionId%>"></input>
-					</div>
-				</div>
-			</div>
-		</div>
-	</form>
--->
 	<script type="text/javascript">
 		piecework = {};
-		piecework.context = <%& json %>;
+		piecework.context = {
+            resource : {
+                  "formInstanceId" : "12345",
+                  "submissionType" : "interim",
+                  "screen" : {
+                    "screenId" : null,
+                    "processDefinitionKey" : null,
+                    "title" : "First screen",
+                    "type" : null,
+                    "location" : "/test/example1.html",
+                    "stylesheets" : [ ],
+                    "sections" : [ {
+                      "sectionId" : "b1d90881-41da-409f-a42f-4add4fc30436",
+                      "tagId" : "basic",
+                      "title" : null,
+                      "description" : null,
+                      "fields" : [ {
+                        "fieldId" : "54b6416f-89a0-43d5-9863-dcf954c0cef4",
+                        "label" : "Employee",
+                        "name" : "employeeName",
+                        "type" : "text",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : true,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 40,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ ],
+                        "options" : [ ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      }, {
+                        "fieldId" : "b37751dc-2058-492a-b78e-22834da02c7c",
+                        "label" : "Budget number",
+                        "name" : "budgetNumber",
+                        "type" : "number",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : true,
+                        "restricted" : false,
+                        "defaultValue" : "100000",
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 20,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ {
+                          "constraintId" : "09942c11-859e-4ec0-80d5-d185cf85786d",
+                          "type" : "IS_NUMERIC",
+                          "name" : null,
+                          "value" : null,
+                          "ordinal" : 0,
+                          "link" : null,
+                          "deleted" : false
+                        } ],
+                        "options" : [ ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      } ],
+                      "buttons" : [ {
+                        "buttonId" : null,
+                        "label" : "Next",
+                        "tooltip" : "Go to next step",
+                        "type" : "button",
+                        "value" : "next",
+                        "link" : null,
+                        "ordinal" : 0,
+                        "deleted" : false
+                      } ],
+                      "ordinal" : 1,
+                      "link" : null,
+                      "deleted" : false
+                    }, {
+                      "sectionId" : "45cff854-1730-49ff-ab85-1e15df94ac8d",
+                      "tagId" : "supplemental",
+                      "title" : null,
+                      "description" : null,
+                      "fields" : [ {
+                        "fieldId" : "b99953b1-c4f5-4296-8578-82c3c8b2f9c7",
+                        "label" : "Manager id",
+                        "name" : "supervisorId",
+                        "type" : "text",
+                        "pattern" : "[a-z]{3}[0-9]{2}",
+                        "customValidity" : "Must be three lower-case letters, followed by two digits",
+                        "editable" : true,
+                        "required" : true,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 40,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ {
+                          "constraintId" : "7feaa392-c802-4d27-8372-9bfec5494014",
+                          "type" : "IS_VALID_USER",
+                          "name" : null,
+                          "value" : null,
+                          "ordinal" : 0,
+                          "link" : null,
+                          "deleted" : false
+                        } ],
+                        "options" : [ ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      }, {
+                        "fieldId" : "87a04602-9064-4190-811d-63c2846d95d1",
+                        "label" : "Action to take",
+                        "name" : "action",
+                        "type" : "select-multiple",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : true,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 255,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ ],
+                        "options" : [ {
+                          "optionId" : "6626f22b-323d-4c36-a86a-616c7a9a0b28",
+                          "value" : "bonus",
+                          "label" : "Grant bonus",
+                          "selected" : false
+                        }, {
+                          "optionId" : "1aa72e9f-9e0b-406d-9352-a9c03cc770c9",
+                          "value" : "reprimand",
+                          "label" : "Reprimand",
+                          "selected" : false
+                        }, {
+                          "optionId" : "7320b38d-e8f3-4dab-ada7-61a233e57373",
+                          "value" : "promote",
+                          "label" : "Promote",
+                          "selected" : false
+                        }, {
+                          "optionId" : "4faf5016-d733-4006-94a7-18537647c4c8",
+                          "value" : "demote",
+                          "label" : "Demote",
+                          "selected" : false
+                        } ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      }, {
+                        "fieldId" : "d4f579f2-5d59-4df0-894b-725aa4f84db1",
+                        "label" : "Location",
+                        "name" : "location",
+                        "type" : "select-one",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : true,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 255,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ ],
+                        "options" : [ {
+                          "optionId" : "4318cba7-8253-4934-acee-320d7cc8f314",
+                          "value" : "in state",
+                          "label" : "In-state",
+                          "selected" : false
+                        }, {
+                          "optionId" : "5b66c5d7-5075-4d3c-b284-5dc589c34332",
+                          "value" : "out of state",
+                          "label" : "Out-of-state",
+                          "selected" : true
+                        }, {
+                          "optionId" : "518d675f-56fd-4965-8e40-9efbc84f542b",
+                          "value" : "waiver",
+                          "label" : "Waiver",
+                          "selected" : false
+                        } ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      }, {
+                        "fieldId" : "b1c49028-9931-4b63-828b-9a1c218db2c3",
+                        "label" : "Description",
+                        "name" : "Description",
+                        "type" : "textarea",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : false,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 4000,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ ],
+                        "options" : [ ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      }, {
+                        "fieldId" : "00b061cc-85b2-4645-a34c-a3faa159cdac",
+                        "label" : "Is this employee allowed to go on vacation?",
+                        "name" : "Allowed",
+                        "type" : "checkbox",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : false,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 255,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ ],
+                        "options" : [ {
+                          "optionId" : "e0dca968-8890-4966-9554-eb7c7b293472",
+                          "value" : "Yes",
+                          "label" : "Yes",
+                          "selected" : false
+                        } ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      }, {
+                        "fieldId" : "7960c75d-ba89-483a-9961-9cc1c568a6ea",
+                        "label" : "Is this form applicable to them?",
+                        "name" : "Applicable",
+                        "type" : "radio",
+                        "pattern" : null,
+                        "customValidity" : null,
+                        "editable" : true,
+                        "required" : false,
+                        "restricted" : false,
+                        "defaultValue" : null,
+                        "displayValueLength" : 40,
+                        "maxValueLength" : 255,
+                        "minValueLength" : 0,
+                        "maxInputs" : 1,
+                        "minInputs" : 1,
+                        "messages" : [ ],
+                        "constraints" : [ ],
+                        "options" : [ {
+                          "optionId" : "ac68c77a-c74f-41de-b604-fd14efcb2997",
+                          "value" : "Yes",
+                          "label" : "Yes",
+                          "selected" : false
+                        }, {
+                          "optionId" : "e1c9a8c5-fb75-40c8-ad7a-698c17d97fc3",
+                          "value" : "No",
+                          "label" : "No",
+                          "selected" : false
+                        } ],
+                        "ordinal" : -1,
+                        "link" : null,
+                        "deleted" : false
+                      } ],
+                      "buttons" : [ ],
+                      "ordinal" : 2,
+                      "link" : null,
+                      "deleted" : false
+                    } ],
+                    "ordinal" : 0,
+                    "link" : null,
+                    "deleted" : false,
+                    "attachmentAllowed" : false
+                  },
+                  "formData" : [ {
+                    "name" : "employeeName",
+                    "value" : "Joe Testington",
+                    "values" : null,
+                    "allValues" : [ "Joe Testington" ]
+                  } ],
+                  "link" : null,
+                  "formValueMap" : {
+                    "employeeName" : {
+                      "name" : "employeeName",
+                      "value" : "Joe Testington",
+                      "values" : null,
+                      "allValues" : [ "Joe Testington" ]
+                    }
+                  }
+                }
+        };
+
+        //<%& json %>;
 	</script>
-	<script data-main="/piecework/static/js/form.js" src='/piecework/static/js/vendor/require.js'></script>
+	<script data-main="../static/js/form.js" src='../static/js/vendor/require.js'></script>
 </body>
 </html>
