Improvements to form and addition of template usage with remote file

--- a/core/src/test/resources/piecework/ui/DecoratingVisitorTest.output.html
+++ b/core/src/test/resources/piecework/ui/DecoratingVisitorTest.output.html
@@ -7,12 +7,12 @@
 
        <form enctype="multipart/form-data" action="" method="POST">
             <div id="basic">
-                <input maxlength="40" name="employeeName" value="Joe Testington" type="text" />
-                <input maxlength="20" name="budgetNumber" type="text" />
+                <input maxlength="40" name="employeeName" value="Joe Testington" type="text" size="40" />
+                <input maxlength="20" name="budgetNumber" type="number" size="40" />
                 <button type="button">Next</button>
             </div>
             <div id="supplemental">
-                <input maxlength="40" name="supervisorId" type="text" />
+                <input maxlength="40" name="supervisorId" type="text" size="40" />
                 <input name="Applicable" type="radio" />
                 <input name="Allowed" type="checkbox" />
                 <textarea name="Description"></textarea>
