--- a/web/src/main/webapp/app/key/Form.template.html
+++ b/web/src/main/webapp/app/key/Form.template.html
@@ -8,13 +8,50 @@
     <link href="../../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="../../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style>
+        body {
+            font-size: 16px;
+        }
+        h1 {
+            margin: 20px 0px;
+            font-size: 50px;
+            font-weight: 200;
+            line-height: 1;
+            letter-spacing: -1px;
+        }
+        h2 {
+            margin: 10px 0px;
+            font-weight: 200;
+            margin-bottom: 5px;
+        }
+        h3 {
+            font-weight: 200;
+            margin-bottom: 5px;
+        }
+        input, textarea, .uneditable-input {
+            width: auto;
+        }
+        p.lead {
+            font-size: 16px;
+            font-weight: 300;
+            line-height: 1.25;
+            color: #999;
+        }
         ul.sections {
             list-style: none;
             margin: 0px;
             padding: 0px;
         }
+        ul.sections li.section {
+            border: 1px solid #CCC;
+            margin: 10px 0px;
+            padding: 0px 20px 20px;
+        }
         div.section-buttons {
             float:right;
+        }
+        div.section-footer {
+            padding: 20px 0px 0px;
+            height: 30px;
         }
     </style>
 </head>
