--- a/web/src/main/webapp/app/Form.template.html
+++ b/web/src/main/webapp/app/Form.template.html
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
-    <link href="../../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link href="../../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <style>
         body {
             font-size: 16px;
@@ -369,6 +369,6 @@
                 }
         };
 	</script>
-	<script data-main="../../static/js/form.js" src="../../static/js/vendor/require.js"></script>
+	<script data-main="../static/js/form.js" src="../static/js/vendor/require.js"></script>
 </body>
 </html>
