--- a/web/src/main/webapp/app/SearchResults.instance.template.html
+++ b/web/src/main/webapp/app/SearchResults.instance.template.html
@@ -52,7 +52,7 @@
         </div>
     </div>
 
-    <script type="text/javascript">
+    <script type="text/javascript" id="piecework-context-script">
         window.piecework = {};
         window.piecework.context = null <!--%& json %-->;
 
