--- a/web/src/main/webapp/app/SearchResults.instance.template.html
+++ b/web/src/main/webapp/app/SearchResults.instance.template.html
@@ -14,7 +14,7 @@
     <div class="navbar navbar-fixed-top">
         <div class="navbar-inner">
             <ul class="navbar-thin nav">
-                <li><a href="task">Workflows</a></li>
+                <li><a href="instance">Workflows</a></li>
                 <li><a href="task">Tasks</a></li>
             </ul>
             <div class="user-information">
