--- a/web/src/main/webapp/app/Form.template.html
+++ b/web/src/main/webapp/app/Form.template.html
@@ -389,6 +389,6 @@
                 }
         };
 	</script>
-	<script data-main="../static/js/form.js" src="../static/js/vendor/require.js"></script>
+	<script data-main="../static/js/main.js" src="../static/js/vendor/require.js"></script>
 </body>
 </html>
