--- a/web/src/main/webapp/app/Form.template.html
+++ b/web/src/main/webapp/app/Form.template.html
@@ -7,6 +7,9 @@
     <title></title>
     <link href="../static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
     <style>
         body {
             font-size: 16px;
