--- a/web/src/main/webapp/app/SearchResults.form.template.html
+++ b/web/src/main/webapp/app/SearchResults.form.template.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
+<!--[if lte IE 8]>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN"
+        "http://www.w3.org/TR/html4/strict.dtd">
+<![endif]-->
 <html lang="en">
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=8" />
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=8" />-->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Workflows</title>
     <link href="static/lib/bootstrap/css/bootstrap.css" rel="stylesheet">
     <link href="static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="static/css/shared.css" rel="stylesheet">
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
 </head>
 <body role="application">
 
@@ -46,7 +53,7 @@
 <div class="main-footer navbar navbar-fixed-bottom">
     <div class="navbar-inner">
         <ul>
-            <li class="nav"><img src=""/></li>
+            <li class="nav"></li>
             <li class="nav pull-right"><h1 style="font-weight: normal">Workflow&nbsp;&nbsp;</h1></li>
         </ul>
     </div>
