Fixing LDAP for identity and authorities populator using TLS

--- a/web/src/main/webapp/app/SearchResults.form.template.html
+++ b/web/src/main/webapp/app/SearchResults.form.template.html
@@ -21,15 +21,13 @@
 <div class="navbar navbar-fixed-top">
     <div class="navbar-inner">
         <ul class="navbar-thin nav">
-            <li><a href="instance">Workflows</a></li>
-            <li><a href="task">Tasks</a></li>
+            <!--<li><a href="instance">Workflows</a></li>-->
+            <!--<li><a href="task">Tasks</a></li>-->
         </ul>
         <div class="user-information">
 
-            <div class="user-information-name pull-right">
-                <div class="dropdown">
-                    <a href=""  style="margin-top: 0px;">Test User <b class="caret icon-white"></b></a>
-                </div>
+            <div id="user-information-name" class="user-information-name pull-right">
+
             </div>
         </div>
         <div class="main-toolbar">
@@ -39,7 +37,7 @@
     </div>
 </div>
 <div class="main-content">
-    <h2>Workflows</h2>
+    <h2>Tasks</h2>
     <table class="search-results table table-hover">
         <thead>
         <tr>
