Form/tasks search user interface improvements

--- a/web/src/main/webapp/app/SearchResults.form.template.html
+++ b/web/src/main/webapp/app/SearchResults.form.template.html
@@ -42,6 +42,7 @@
         <thead>
         <tr>
             <th>Label</th>
+            <th>Task</th>
             <th>Type</th>
             <th>Started</th>
         </tr>
