Standardizing around a single layout

--- a/web/src/main/webapp/old-app/Form.template.html
+++ b/web/src/main/webapp/old-app/Form.template.html
@@ -80,6 +80,26 @@
 </head>
 
 <body>
+    <div class="navbar navbar-fixed-top">
+        <div class="navbar-inner">
+            <ul class="navbar-thin nav">
+                <li><a href="instance">Workflows</a></li>
+                <li><a href="task">Tasks</a></li>
+            </ul>
+            <div class="user-information">
+
+                <div class="user-information-name pull-right">
+                    <div class="dropdown">
+                        <a href=""  style="margin-top: 0px;">Test User <b class="caret icon-white"></b></a>
+                    </div>
+                </div>
+            </div>
+            <div class="main-toolbar">
+
+
+            </div>
+        </div>
+    </div>
     <div class="main-content container-fluid">
 
     </div>
