Adding attachment capability to form

--- a/web/src/main/webapp/app/Layout.template.html
+++ b/web/src/main/webapp/app/Layout.template.html
@@ -9,7 +9,7 @@
     <link href="../static/lib/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
     <link href="../static/css/layout.css" rel="stylesheet">
     <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="https://raw.github.com/aFarkas/html5shiv/master/dist/html5shiv.js"></script>
     <![endif]-->
 </head>
 <body role="application">
