Improving attachment of files and notes in form user interface

--- a/web/src/main/webapp/app/Layout.template.html
+++ b/web/src/main/webapp/app/Layout.template.html
@@ -25,7 +25,9 @@
             </div>
         </div>
     </div>
-    <div class="main-content"></div>
+    <div class="container-fluid">
+        <div class="main-content row-fluid"></div>
+    </div>
     <div class="main-footer navbar navbar-fixed-bottom">
         <div class="navbar-inner">
             <ul>
