--- a/web/src/main/webapp/static/test/TestRunner.html
+++ b/web/src/main/webapp/static/test/TestRunner.html
@@ -14,11 +14,11 @@
     <!-- include source files here... -->
     <script src="../js/vendor/jquery-1.10.2.min.js"></script>
     <script src="../js/vendor/jquery-ui-1.10.3.custom.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-mocks.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-resource.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-sanitize.min.js"></script>
+    <script src="../js/vendor/angular.min.js"></script>
+    <script src="../js/vendor/angular-mocks.js"></script>
+    <script src="../js/vendor/angular-resource.min.js"></script>
+    <script src="../js/vendor/angular-route.min.js"></script>
+    <script src="../js/vendor/angular-sanitize.min.js"></script>
     <script src="../js/vendor/ui-bootstrap-0.6.0.min.js"></script>
     <script src="../js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
     <script src="../js/vendor/jquery.inputmask.js"></script>
