Updating directives and templates to mark inline attachment urls as trusted

--- a/web/src/main/webapp/static/test/TestRunner.html
+++ b/web/src/main/webapp/static/test/TestRunner.html
@@ -31,7 +31,7 @@
     <script src="../js/wf-services.js"></script>
     <script src="../js/wf-templates.js"></script>
     <script src="../js/wf-directives.js"></script>
-    <script src="../js/wf-controllers.js"></script>
+    <script src="../js/wf-search.js"></script>
     <script type="text/javascript" src="WorkflowSpec.js"></script>
 </head>
 
