Fixing jasmine unit tests

--- a/web/src/main/webapp/static/test/TestRunner.html
+++ b/web/src/main/webapp/static/test/TestRunner.html
@@ -19,8 +19,9 @@
     <script src="../js/vendor/angular-resource.min.js"></script>
     <script src="../js/vendor/angular-route.min.js"></script>
     <script src="../js/vendor/angular-sanitize.min.js"></script>
-    <script src="../js/vendor/ui-bootstrap-0.6.0.min.js"></script>
-    <script src="../js/vendor/ui-bootstrap-tpls-0.6.0.js"></script>
+    <script src="../js/vendor/angular-local-storage.js"></script>
+    <script src="../js/vendor/ui-bootstrap-0.10.0.min.js"></script>
+    <script src="../js/vendor/ui-bootstrap-tpls-0.10.0.min.js"></script>
     <script src="../js/vendor/jquery.inputmask.js"></script>
     <script src="../js/vendor/moment.min.js"></script>
     <script src="../js/vendor/jquery.iframe-transport.js"></script>
